--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "138_PATTERN.C": "cpp",
-        "159_REC.C": "cpp"
+        "159_REC.C": "cpp",
+        "string.h": "c"
     }
 }
